# Magpie_MAX32650_BC840

./: README.md
blinky_custom/boards/arm/nrf52840_bc840/: Kconfig.board  Kconfig.defconfig  nrf52840_bc840.dts  nrf52840_bc840.yaml  nrf52840_bc840_defconfig
blinky_custom/boards/arm/nrf52840_magpie/: Kconfig.board  nrf52840_magpie_defconfig
littleFS/: CMakeLists.txt  DRIVER_IMPLEMENTATION_COMPLETE.md  DS3231_DRIVER_README.md  DS3231_INTEGRATION_GUIDE.md  DS3231_SUMMARY.md  DS3231_datasheet.txt  FLASH_NAMING_REFERENCE.md  FLASH_SELECTION_GUIDE.md  HARDWARE_CONFIG_SUMMARY.md  MX25L25645G-08G.txt  prj.conf
littleFS/boards/arm/nrf52832_ev_bc832/: nrf52832_ev_bc832.overlay
littleFS/boards/arm/nrf52840_bc840/: Kconfig.board  Kconfig.defconfig  board.cmake  nrf52840_bc840-pinctrl.dtsi  nrf52840_bc840.dts  nrf52840_bc840.yaml  nrf52840_bc840_defconfig
littleFS/boards/arm/nrf52840_magpie/: Kconfig.defconfig  nrf52840_magpie-pinctrl.dtsi  nrf52840_magpie.dts  nrf52840_magpie.yaml  nrf52840_magpie_defconfig
littleFS/src/: ds3231.c  ds3231.h  ds3231_example.c  main.c  mx25l51245g_flash.c  nor_flash.c  nor_flash.h
system_off/: .gitignore  BLE_module.kicad_sch  Kconfig  prj.conf
system_off/boards/arm/nrf52840_magpie/: nrf52840_magpie.dts  nrf52840_magpie.yaml
system_off/src/: main.c
